[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/Sprites/TrepanoGargoyle-Sheet.png" type="Texture" id=1]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=2]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=5]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=6]
[ext_resource path="res://Entities/Enemy_TreapanoGargoyle.gd" type="Script" id=7]
[ext_resource path="res://Assets/Shader/wobblyEffect.shader" type="Shader" id=8]
[ext_resource path="res://Assets/Normals/glass.jpg" type="Texture" id=9]
[ext_resource path="res://Assets/Sounds/gargolyteShoot.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 186.083, 128.603 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/strength = 0.001
shader_param/speed = 6.0
shader_param/frames = 3
shader_param/random_value = null
shader_param/flowMap = ExtResource( 9 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 1664, 0, 128, 80 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="Resource" id=18]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 868, -60 )
}
name = "Dead"

[sub_resource type="Resource" id=19]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 388, 100 )
}
name = "Entry"

[sub_resource type="Resource" id=20]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 628, -60 )
}
name = "Fire"

[sub_resource type="Resource" id=21]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 628, 100 )
}
name = "Fly"

[sub_resource type="Resource" id=22]
script = ExtResource( 2 )
from = "Entry"
to = "Fly"
conditions = {
}

[sub_resource type="Resource" id=23]
script = ExtResource( 4 )
name = "die"

[sub_resource type="Resource" id=24]
script = ExtResource( 2 )
from = "Fire"
to = "Dead"
conditions = {
"die": SubResource( 23 )
}

[sub_resource type="Resource" id=25]
script = ExtResource( 4 )
name = "stop_firing"

[sub_resource type="Resource" id=26]
script = ExtResource( 2 )
from = "Fire"
to = "Fly"
conditions = {
"stop_firing": SubResource( 25 )
}

[sub_resource type="Resource" id=27]
script = ExtResource( 4 )
name = "die"

[sub_resource type="Resource" id=28]
script = ExtResource( 2 )
from = "Fly"
to = "Dead"
conditions = {
"die": SubResource( 27 )
}

[sub_resource type="Resource" id=29]
script = ExtResource( 4 )
name = "start_firing"

[sub_resource type="Resource" id=30]
script = ExtResource( 2 )
from = "Fly"
to = "Fire"
conditions = {
"start_firing": SubResource( 29 )
}

[sub_resource type="Resource" id=31]
script = ExtResource( 3 )
name = ""
states = {
"Dead": SubResource( 18 ),
"Entry": SubResource( 19 ),
"Fire": SubResource( 20 ),
"Fly": SubResource( 21 )
}
transitions = {
"Entry": {
"Fly": SubResource( 22 )
},
"Fire": {
"Dead": SubResource( 24 ),
"Fly": SubResource( 26 )
},
"Fly": {
"Dead": SubResource( 28 ),
"Fire": SubResource( 30 )
}
}

[node name="TrepanoGargoyle" type="KinematicBody2D"]
position = Vector2( 0, -350 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.667419, 17.3529 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 4, 4 )
frames = SubResource( 17 )
animation = "attack"

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 5 )
state_machine = SubResource( 31 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
bus = "SoundEffects"

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="transited" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_transited"]
[connection signal="updated" from="StateMachinePlayer" to="." method="_on_StateMachinePlayer_updated"]
